Bug 1290333 - Giving constraint on frame buffer size to avoid driver crash; r?jgilbert

MozReview-Commit-ID: FaVhvB1ZMyr